# temporal-deep-research-demo

./: .env-sample  .gitignore  README.md  interactive_research_report.md  pyproject.toml
openai-agents-demos/: .env-sample  .gitignore  README.md
openai_agents/: run_interactive_research_workflow.py  run_worker.py  serializable_model_activity.py
openai_agents/workflows/: image_generation_activity.py  interactive_research_workflow.py  pdf_generation_activity.py
openai_agents/workflows/research_agents/: README.md  clarifying_agent.py  imagegen_agent.py  instruction_agent.py  pdf_generator_agent.py  planner_agent.py  research_manager.py  research_models.py  search_agent.py  triage_agent.py  writer_agent.py
ui/: streamlit_app.py  streamlit_requirements.txt  streamlit_utils.py
